# llm-jepa

./: .env.sample  .gitignore  README.md  evaluate.py  finetune.py  finetune8bh200.py  paper.html  pyproject.toml  run_qwen3_8b.sh  run_stp.py  stp.py
scripts/: llama1b_jepa_gsm8k.sh  llama1b_jepa_synth.sh  llama1b_regular_gsm8k.sh  llama1b_regular_synth.sh  qwen3_8b_jepa_gsm8k.sh  qwen3_8b_regular_gsm8k.sh
