[project]
name = "llm-jepa"
version = "0.1.0"
description = "LLM JEPA experiments"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
    "datasets>=4.0.0",
    "peft>=0.18.0",
    "safetensors>=0.7.0",
    "accelerate>=1.12.0",
    "tqdm>=4.67.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.8.0",
    "numpy>=2.3.0",
    "scipy>=1.17.0",
    "python-dotenv>=1.2.0",
    "protobuf>=6.0.0",
    "sentencepiece>=0.2.0",
    "wandb>=0.25.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
